plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'pe.plazavea'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

javafx {
    version = '25'
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'pe.plazavea.perecibles.App'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

dependencies {
    implementation 'org.controlsfx:controlsfx:11.2.1'
    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
}
